@@ -3,8 +3,9 @@ apt (0.8.16~exp7) experimental; urgency=low
   [ David Kalnischkies ]
   * do not pollute namespace in the headers with using (Closes: #500198)
   * use forward declaration in headers if possible instead of includes
+  * remove old APT_COMPATIBILITY ifdef's
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 19 Sep 2011 19:13:48 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 19 Sep 2011 19:24:20 +0200
 
 apt (0.8.16~exp6) experimental; urgency=low
 
